# openMVS

./: .clang-format  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ConfigLocal.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenMVS.sln  OpenMVSConfig.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
apps/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
apps/DensifyPointCloud/: CMakeLists.txt  DensifyPointCloud.vcxproj  DensifyPointCloud.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
apps/InterfaceCOLMAP/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  InterfaceCOLMAP.vcxproj  InterfaceCOLMAP.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
apps/InterfaceMVSNet/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  InterfaceMVSNet.vcxproj  InterfaceMVSNet.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
apps/InterfaceMetashape/: CMakeLists.txt  INSTALL.vcxproj  (+6 more)
demo/: CMakeLists.txt  demo_texture_map.cpp
docs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
libs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
(+211 files in other folders)
